зменила фото в 10 задании

--- a/Labs1/Task10/gallery.html
+++ b/Labs1/Task10/gallery.html
@@ -27,7 +27,7 @@
             <img src="https://astv.ru/content/NewsImage/36/1f/361fd63c-7399-4533-b165-06a9298375a2_3.jpg" alt="Мем с котиком 6">
         </div>
         <div class="gallery-item">
-            <img src="https://i.ytimg.com/vi/iFjnmRJ8XkM/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAd74bZIUB8CAjPRr3iPw1FDGRViA" alt="Мем с котиком 7">
+            <img src="https://memi.klev.club/uploads/posts/2024-04/memi-klev-club-6lft-p-memi-neponimayushchii-kot-6.jpg" alt="Мем с котиком 7">
         </div>
         <div class="gallery-item">
             <img src="https://icdn.lenta.ru/images/2025/05/13/18/20250513184900219/square_320_8c911f520bff895d63c9e88e7c67f0ec.jpg" alt="Мем с котиком 8">
